# esp32_desktop_controller

./: CMakeCache.txt  CMakeLists.txt  README.md  config.env  sdkconfig  sdkconfig.old
components/iot_iconset/: CMakeLists.txt  iot_iconset_16x16.c  iot_iconset_16x16.h
config/: sdkconfig.cmake  sdkconfig.json
main/: CMakeLists.txt  desktop_controller.c  tusb_config.h
main/dht22/: temp_sensor.h
main/fan_control/: fan_control.c  fan_control.h
main/hid_device/: hid_device.c  hid_device.h
main/http/: http_client_server.c  http_client_server.h
main/keyswitches/: keyswitches.c  keyswitches.h
main/ntp_time/: ntp_time.h
main/oled_screen/: oled_screen.c  oled_screen.h
main/oled_screen/bitmap_numbers/: bitmap_numbers.c  bitmap_numbers.h
main/relay_driver/: relay_driver.c  relay_driver.h
main/sd_card/: sd_card.h
main/time_manager/: time_manager.c  time_manager.h
main/wifi_connection/: wifi_connection.c  wifi_connection.h
